# py-fastapi-simple-restful-api

./: .gitignore  README.md  main.py  pyproject.toml
test/: test_items.py
